<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:background="@color/black">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#BD2AC0">

            <!-- Left Button (Sort) -->
            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#BD2AC0"
                android:src="@drawable/arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Right Button (Search) -->


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/search"
        android:layout_width="288dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:background="@drawable/round_edittext"
        android:hint="Search"
        android:padding="20px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayoutTop" />

    <Button
        android:id="@+id/bsearch"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="Search"
        app:backgroundTint="#BD2AC0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutTop" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"



        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>